// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser return statements parses expression returns 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "statements": Array [
          Return {
            "keyword": Object {
              "kind": 66,
              "line": 2,
              "text": "return",
            },
            "value": Call {
              "args": Array [],
              "callee": Variable {
                "name": Object {
                  "kind": 21,
                  "line": 2,
                  "text": "RebootSystem",
                },
              },
              "closingParen": Object {
                "kind": 1,
                "line": 2,
                "text": ")",
              },
            },
          },
        ],
      },
      "parameters": Array [],
      "returns": 9,
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "foo",
    },
  },
]
`;

exports[`parser return statements parses literal returns 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "statements": Array [
          Return {
            "keyword": Object {
              "kind": 66,
              "line": 2,
              "text": "return",
            },
            "value": Literal {
              "value": BrsString {
                "kind": 2,
                "value": "test",
              },
            },
          },
        ],
      },
      "parameters": Array [],
      "returns": 9,
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "foo",
    },
  },
]
`;

exports[`parser return statements parses void returns 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "statements": Array [
          Return {
            "keyword": Object {
              "kind": 66,
              "line": 2,
              "text": "return",
            },
            "value": undefined,
          },
        ],
      },
      "parameters": Array [],
      "returns": 9,
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "foo",
    },
  },
]
`;
